--- a/Portfoliosite/past.html
+++ b/Portfoliosite/past.html
@@ -97,7 +97,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-md-block"></div>
+            <!--<div class="clearfix visible-md-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Last_Supper_Hero.jpg">
@@ -107,7 +107,7 @@
                 <p>medium<br>10 x 10 cm</p>
                 </div>
               </div>
-            </div>
+            </div>-->
             <div class="clearfix visible-lg-block  visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
