--- a/Portfoliosite/past.html
+++ b/Portfoliosite/past.html
@@ -101,7 +101,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Last_Supper_Hero.jpg">
-                  <br><img width="152px" height="120px" src="images/Last_Supper_Hero.jpg" 
+                  <br><img width="152px" height="120px" src="images/Last_Supper_Hero.JPG" 
                   class="img-responsive" title="Last Supper Hero"></a>
                 <div class="caption">Title...year
                 <p>medium<br>10 x 10 cm</p>
