--- a/Portfoliosite/past.html
+++ b/Portfoliosite/past.html
@@ -71,7 +71,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Sleep.jpg">
-                  <br><img width="145px" height="120px" src="images/Sleep.jpg" class="fancybox img-responsive" title="Sleep"></a>
+                  <br><img width="145px" height="120px" src="images/Sleep.jpg" class="img-responsive" title="Sleep"></a>
                 <div class="caption">Title...year
                 <p>medium<br>10 x 10 cm</p>
                 </div>
