--- a/Portfoliosite/past.html
+++ b/Portfoliosite/past.html
@@ -86,29 +86,37 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
-                <a href="images/Ladder.jpg">
-                  <br><img width="79px" height="120px" src="images/Ladder.jpg" class="img-responsive" title="Ladder">
-                  </a>
+                <a href="images/Cooking.jpg">
+                  <br><img width="148px" height="120px" src="images/Cooking.jpg" class="img-responsive" title="Cooking"></a>
                 <div class="caption">Title...year
                 <p>medium<br>10 x 10 cm</p>
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-md-block"></div>
+            <div class="clearfix visible-sm-block"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/Ladder.jpg">
+                  <br><img width="79px" height="120px" src="images/Ladder.jpg" class="img-responsive" title="Ladder"></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="clearfix visible-md-block visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Last_Supper_Hero.jpg">
-                  <br><img width="152px" height="120px" src="images/Last_Supper_Hero.JPG" 
+                  <br><img width="152px" height="120px" src="images/Last_Supper_Hero.jpg" 
                   class="img-responsive" title="Last Supper Hero"></a>
                 <div class="caption">Title...year
                 <p>medium<br>10 x 10 cm</p>
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-lg-block  visible-sm-block"></div>
+            <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Element.jpg">
@@ -137,6 +145,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Peters_Doubt.jpg">
@@ -146,7 +155,6 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Dishes.jpg">
@@ -176,6 +184,25 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-lg-block"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/Constellation-1.jpg">
+                  <br><img width="71px" height="120px" src="images/Constellation-1.jpg" class="img-responsive" title="Constellation-1"></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/Constellation-2.jpg">
+                  <br><img width="118px" height="120px" src="images/Constellation-2.jpg" class="img-responsive" title="Constellation-2"></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Sancho_y_Hina.jpg">
@@ -194,6 +221,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Thumb_Wars.jpg">
@@ -212,7 +240,16 @@
                 </div>
               </div>
             </div>
-             <div class="clearfix visible-md-block"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/Weisberg_Landscape.jpg">
+                  <br><img width="160px" height="120px" src="images/Weisberg_Landscape.jpg" class="img-responsive" title="Weisberg Landscape"></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="clearfix visible-md-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Prey_for_Better_Whether.jpg">
@@ -225,6 +262,33 @@
             <div class="clearfix visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
+                <a href="images/Glory.jpg">
+                  <br><img width="151px" height="120px" src="images/Glory.jpg" class="img-responsive" title="Glory"></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/Still_Life-2.jpg">
+                  <br><img width="87px" height="120px" src="images/Still_Life-2.jpg" class="img- responsive" title="Still Life-2"></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/Still_Life-1.jpg">
+                  <br><img width="95px" height="120px" src="images/Still_Life-1.jpg" class="img-responsive" title="Still Life-1"></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
                 <a href="images/Self_Portrait_Litho.jpg">
                   <br><img width="100px" height="120px" src="images/Self_Portrait_Litho.jpg" class="img-responsive" title="Self Portrait"></a>
                 <div class="caption">Title...year
@@ -232,6 +296,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Self_Unportrait.jpg">
@@ -241,7 +306,7 @@
                 </div>
               </div>
             </div>
-             <div class="clearfix visible-md-block visible-sm-block"></div>
+             <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Childs_Play.jpg">
@@ -269,6 +334,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/A_Game_A_Gift.jpg">
@@ -297,7 +363,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-lg-block visible-md-block visible-sm-block"></div>
+            <div class="clearfix visible-md-block visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Untitled.jpg">
@@ -307,6 +373,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Manor_Rd_2002.jpg">
@@ -316,6 +383,52 @@
                 </div>
               </div>
             </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/.jpg">
+                  <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/.jpg">
+                  <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/.jpg">
+                  <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/.jpg">
+                  <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <a href="images/.jpg">
+                  <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
+                <div class="caption">Title...year
+                <p>medium<br>10 x 10 cm</p>
+                </div>
+              </div>
+            </div>
+          </div>
             <!--<div class="clearfix visible-lg-block"></div>-->
         </div>
         <br><br><br><br><a href="past.html">(top)</a>
