--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -79,8 +79,53 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
+              <a href="images/Self_Portrait_With_Coffee_Cup.jpg">
+                <br><img width="75px" height="120px" src="images/Self_Portrait_With_Coffee_Cup.jpg" class="img-responsive" title="Self Portrait With Coffee Cup"></a>
+              <div class="caption">Title...year
+              <p>medium<br>10 x 10 cm</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="thumbnail">
+              <a href="images/Self_Portrait_Yellow_Shirt.jpg">
+                <br><img width="71px" height="120px" src="images/Self_Portrait_Yellow_Shirt.jpg" class="img-responsive" title="Self Portrait Yellow Shirt"></a>
+              <div class="caption">Title...year
+              <p>medium<br>10 x 10 cm</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="thumbnail">
+              <a href="images/Self_Portrait_Green_Shirt.jpg">
+                <br><img width="94px" height="120px" src="images/Self_Portrait_Green_Shirt.jpg" class="img-responsive" title="Self Portrait Green Shirt"></a>
+              <div class="caption">Title...year
+              <p>medium<br>10 x 10 cm</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="thumbnail">
               <a href="images/encaustic_portrait.jpg">
                 <br><img width="160px" height="120px" src="images/encaustic_portrait.jpg" class="img-responsive" title="Encaustic Portrait"></a>
+              <div class="caption">Title...year
+              <p>medium<br>10 x 10 cm</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="thumbnail">
+              <a href="images/Line_For_Icecream.jpg">
+                <br><img width="157px" height="120px" src="images/Line_For_Icecream.jpg" class="img-responsive" title="Line For Icecream"></a>
+              <div class="caption">Title...year
+              <p>medium<br>10 x 10 cm</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="thumbnail">
+              <a href="images/Line_For_Food-1.jpg">
+                <br><img width="154px" height="120px" src="images/Line_For_Food-1.jpg" class="img-responsive" title="Line For Food-1"></a>
               <div class="caption">Title...year
               <p>medium<br>10 x 10 cm</p>
               </div>
@@ -89,14 +134,14 @@
           <div class="clearfix visible-sm-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
-              <a href="images/Valentine.jpg">
-                <br><img width="141px" height="120px" src="images/Valentine.jpg" class="img-responsive" title="Valentine"></a>
+              <a href="images/valentine.jpg">
+                <br><img width="141px" height="120px" src="images/valentine.jpg" class="img-responsive" title="Valentine"></a>
               <div class="caption">Title...year
               <p>medium<br>10 x 10 cm</p>
               </div>
             </div>
           </div>
-          <div class="clearfix visible-md-block"></div>
+          <div class="clearfix visible-md-block visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/hannah_commision_1.jpg">
@@ -133,6 +178,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Wolearab-inside.jpg">
@@ -142,7 +188,6 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/David_Folsom-Choctaw_Hymns.jpg">
@@ -179,7 +224,6 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Al_Wright-Choctaw_Hymns.jpg">
@@ -207,6 +251,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Enlisting-Bertram_Bobb_Documentry.jpg">
@@ -216,7 +261,6 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
@@ -244,6 +288,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
@@ -253,7 +298,6 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
@@ -275,7 +319,17 @@
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
-                <br><img width="103px" height="120px" src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg" class="img-responsive" title="Bobb Portrait-Bertram Bobb Documentry"></a>
+                <br><img width="103px" height="120px" src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg" class="img-responsive" title="Bertram Bobb Portrait-Bertram Bobb Documentry"></a>
+              <div class="caption">Title...year
+              <p>medium<br>10 x 10 cm</p>
+              </div>
+            </div>
+          </div>
+          <div class="clearfix visible-lg-block"></div>
+          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="thumbnail">
+              <a href="images/Surprise_Birthday.jpg">
+                <br><img width="95px" height="120px" src="images/Surprise_Birthday.jpg" class="img-responsive" title="Surprise Birthday"></a>
               <div class="caption">Title...year
               <p>medium<br>10 x 10 cm</p>
               </div>
@@ -283,8 +337,8 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
+              <a href="images/Untitled-Sufi.jpg">
+                <br><img width="155px" height="120px" src="images/Untitled-Sufi.jpg" class="img-responsive" title="Untitled-Sufi"></a>
               <div class="caption">Title...year
               <p>medium<br>10 x 10 cm</p>
               </div>
@@ -292,71 +346,8 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
-              <div class="caption">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
-              <div class="caption">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
-              <div class="caption">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
-              <div class="caption">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
-              <div class="caption">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
-              <div class="caption">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
-              <div class="caption">Title...year
-              <p>medium<br>10 x 10 cm</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="thumbnail">
-              <a href="images/.jpg">
-                <br><img width="165px" height="120px" src="images/.jpg" class="img-responsive" title=""></a>
+              <a href="images/Darlington_Bedroom.jpg">
+                <br><img width="121px" height="120px" src="images/Darlington_Bedroom.jpg" class="img-responsive" title="Darlington Bedroom"></a>
               <div class="caption">Title...year
               <p>medium<br>10 x 10 cm</p>
               </div>
