--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -134,8 +134,8 @@
           <div class="clearfix visible-sm-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
-              <a href="images/valentine.jpg">
-                <br><img width="141px" height="120px" src="images/valentine.jpg" class="img-responsive" title="Valentine"></a>
+              <a href="images/Valentine.jpg">
+                <br><img width="141px" height="120px" src="images/Valentine.jpg" class="img-responsive" title="Valentine"></a>
               <div class="caption">Title...year
               <p>medium<br>10 x 10 cm</p>
               </div>
