--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -95,6 +95,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-md-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Self_Portrait_Green_Shirt.jpg">
@@ -122,6 +123,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-md-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Line_For_Food-1.jpg">
@@ -131,7 +133,6 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-sm-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Valentine.jpg">
@@ -141,7 +142,7 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-md-block visible-lg-block"></div>
+          <div class="clearfix visible-sm-block visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/hannah_commision_1.jpg">
@@ -160,6 +161,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-sm-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/hannah_commision_3.jpg">
@@ -178,7 +180,7 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-lg-block"></div>
+          <div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Wolearab-inside.jpg">
@@ -233,6 +235,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-sm-block visible-md-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/First_Day-Bertram_Bobb_Documentry.jpg">
@@ -251,7 +254,7 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-lg-block"></div>
+          <div class="clearfix visible-sm-block visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Enlisting-Bertram_Bobb_Documentry.jpg">
@@ -261,6 +264,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-md-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
@@ -288,7 +292,7 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-lg-block"></div>
+          <div class="clearfix visible-md-block visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
@@ -307,6 +311,7 @@
               </div>
             </div>
           </div>
+          <div class="clearfix visible-sm-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
@@ -325,7 +330,7 @@
               </div>
             </div>
           </div>
-          <div class="clearfix visible-lg-block"></div>
+          <div class="clearfix visible-sm-block visible-lg-block"></div>
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
             <div class="thumbnail">
               <a href="images/Surprise_Birthday.jpg">
