--- a/Portfoliosite/past.html
+++ b/Portfoliosite/past.html
@@ -86,6 +86,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Cooking.jpg">
@@ -95,7 +96,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-sm-block"></div>
+            <div class="clearfix visible-md-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Ladder.jpg">
@@ -105,7 +106,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-md-block visible-lg-block"></div>
+            <div class="clearfix visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Last_Supper_Hero.JPG">
@@ -116,7 +117,6 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Element.jpg">
@@ -135,7 +135,6 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-md-block visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Grecian_Urn.jpg">
@@ -145,7 +144,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-lg-block"></div>
+            <div class="clearfix visible-sm-block visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Peters_Doubt.jpg">
@@ -174,7 +173,6 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Stitches.jpg">
@@ -184,7 +182,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-lg-block"></div>
+            <div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Constellation-1.jpg">
@@ -221,7 +219,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-lg-block"></div>
+            <div class="clearfix visible-sm-block visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Thumb_Wars.jpg">
@@ -240,6 +238,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-sm-block visible-md-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Weisberg_Landscape.jpg">
@@ -249,7 +248,6 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-md-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Prey_for_Better_Whether.jpg">
@@ -259,7 +257,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-lg-block"></div>
+            <div class="clearfix visible-sm-block visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Glory.jpg">
@@ -278,6 +276,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Still_Life-1.jpg">
@@ -296,7 +295,7 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-lg-block"></div>
+            <div class="clearfix visible-sm-block visible-md-block visible-lg-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Self_Unportrait.jpg">
@@ -306,7 +305,6 @@
                 </div>
               </div>
             </div>
-             <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Childs_Play.jpg">
@@ -344,7 +342,6 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/A_House_But_Not_A_Home.jpg">
@@ -354,6 +351,7 @@
                 </div>
               </div>
             </div>
+            <div class="clearfix visible-sm-block visible-md-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Going_Home.jpg">
@@ -363,7 +361,6 @@
                 </div>
               </div>
             </div>
-            <div class="clearfix visible-md-block visible-sm-block"></div>
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="thumbnail">
                 <a href="images/Untitled.jpg">
