--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -7,6 +7,7 @@
     <title>Jimi Morris Portfolio Present Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="jquery.bsPhotoGallery.css">
   </head>
   <body>
     <header>
