--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -380,6 +380,7 @@
         <!-- jQuery (Bootstrap JS plugins depend on it) -->
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>  
+    <script src="js/script.js"></script>
+    <script src="jquery.bsPhotoGallery.js"></script>
   </body>
 </html>
