--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -54,7 +54,23 @@
     </header>
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
-        <div class="row">
+        <ul class="row first">
+            <li>
+                <img alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
+                <div class="text">Consectetur adipiscing elit</div>
+            </li>
+            <li>
+                <img alt="Self_Portrait_With_Coffee_Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
+                <div class="text">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+            </li>
+            <li>
+                <img alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
+                 <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
+            </li>
+        
+  </ul>
+
+        <!--<div class="row">
           <div class="col-lg-12">
             <h2 class="page-header text-center">Current Artwork</h2>
             <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
@@ -339,7 +355,7 @@
               <p>medium<br>10 x 10 cm</p>
               </div>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
       <a href="present.html">(top)</a>
