--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -397,7 +397,8 @@
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     
-    <script src="jquery.bsPhotoGallery.js"></script>
+    <script src="js/jquery.bsPhotoGallery.js"></script>
+    <script src="js/script.js"></script>
     <script>
       $(document).ready(function(){
   $('ul.first').bsPhotoGallery({
