--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -55,18 +55,18 @@
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
         <ul class="row">
-            <li  class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <img alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
+            <li>
+                <img width="91px" height="120px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
                 <div class="text">Consectetur adipiscing elit</div>
             </li>
-            <li  class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <img alt="Self_Portrait_With_Coffee_Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
+            <li>
+                <img width="75px" height="120px" alt="Self_Portrait_With_Coffee_Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
                 <div class="text">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam</div>
             </li>
-            <li  class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
-                <img alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
+            <li>
+                <img width="71px" height="120px" alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
                  <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
-            </li>
+            </li> 
         
         </ul>
 
