--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -54,7 +54,7 @@
     </header>
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
-        <ul class="row">
+        <ul class="row first">
             <li>
                 <img alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
                 <div class="text">Consectetur adipiscing elit</div>
