--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -396,7 +396,7 @@
         <!-- jQuery (Bootstrap JS plugins depend on it) -->
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script src="js/jquery.bsPhotoGallery.js"></script>
     <script src="js/script.js"></script>
     <script>
