--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -7,7 +7,7 @@
     <title>Jimi Morris Portfolio Present Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="jquery.bsPhotoGallery.css">
+    <link rel="stylesheet" href="css/jquery.bsPhotoGallery.css">
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.js"></script>
