--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -79,6 +79,18 @@
             <li>
                 <img alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
                  <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
+            </li>
+            <li>
+                <img alt="Self_Portrait_Green_Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
+                <div class="text">Consectetur adipiscing elit</div>
+            </li>
+            <li>
+                <img alt="encaustic_portrait"  src="images/encaustic_portrait.jpg">
+                <div class="text">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+            </li>
+            <li>
+                <img alt="Line_For_Icecream"  src="images/Line_For_Icecream.jpg">
+                 <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
             </li> 
         
         </ul>
