--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -80,10 +80,12 @@
                 <img alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
                  <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
             </li>
+            <div class="clearfix visible-lg-block"></div>
             <li>
                 <img alt="Self_Portrait_Green_Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
                 <div class="text">Consectetur adipiscing elit</div>
             </li>
+            <div class="clearfix visible-lg-block"></div>
             <li>
                 <img alt="encaustic_portrait"  src="images/encaustic_portrait.jpg">
                 <div class="text">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam</div>
