--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -69,7 +69,7 @@
       <div class="container">
         <ul class="row first">
             <li>
-                <img alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
+                <img width="91px" height="120px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
                 <div class="text">Consectetur adipiscing elit</div>
             </li>
             <li>
