--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -69,30 +69,30 @@
       <div class="container">
         <ul class="row first">
             <li>
-                <img class="text-center" width="91px" height="120px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
-                <div class="text">Consectetur adipiscing elit</div>
+                <img class="text-center" width="182px" height="240px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
+                <div class="text"></div>
             </li>
             <li>
-                <img alt="Self_Portrait_With_Coffee_Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
-                <div class="text">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                <img class="text-center" width="150px" height="240px" alt="Self_Portrait_With_Coffee_Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
+                <div class="text"></div>
             </li>
             <li>
-                <img alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
-                 <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
+                <img class="text-center" width="142px" height="240px" alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
+                 <div class="text"></div>
+            </li>
+            <!--<div class="clearfix visible-lg-block"></div>-->
+            <li>
+                <img class="text-center" width="188px" height="240px" alt="Self_Portrait_Green_Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
+                <div class="text"</div>
             </li>
             <div class="clearfix visible-lg-block"></div>
             <li>
-                <img alt="Self_Portrait_Green_Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
-                <div class="text">Consectetur adipiscing elit</div>
-            </li>
-            <div class="clearfix visible-lg-block"></div>
-            <li>
-                <img alt="encaustic_portrait"  src="images/encaustic_portrait.jpg">
-                <div class="text">Lorem ipsum dolor sit amet, labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                <img class="text-center" width="320px" height="240px" alt="encaustic_portrait"  src="images/encaustic_portrait.jpg">
+                <div class="text"></div>
             </li>
             <li>
-                <img alt="Line_For_Icecream"  src="images/Line_For_Icecream.jpg">
-                 <div class="text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</div>
+                <img class="text-center" width="314px" height="240px" alt="Line_For_Icecream"  src="images/Line_For_Icecream.jpg">
+                 <div class="text">C</div>
             </li> 
         
         </ul>
