--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -78,8 +78,136 @@
             </li>
             <li>
                 <img class="text-center" width="314px" height="240px" alt="Line_For_Icecream"  src="images/Line_For_Icecream.jpg">
-                 <div class="text">C</div>
-            </li> 
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+                  <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
         
         </ul>
 
