--- a/Portfoliosite/past.html
+++ b/Portfoliosite/past.html
@@ -54,7 +54,137 @@
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
+          <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+                  <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+            <li>
+                <img class="text-center" width="" height="240px" alt=""  src="">
+                 <div class="text"></div>
+            </li>
+        
+        </ul>
+         <!-- <div class="col-lg-12">
             <h2 class="page-header text-center">Past Artwork</h2>
             <div class="thumb col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <a class="thumbnail" href="images/Sleep.jpg" data-image-id="" data-toggle="modal" data-title="Sleep" data-caption="" data-image="images/Sleep.jpg" data-target="#image-gallery">
@@ -332,7 +462,7 @@
               <p>medium<br>10 x 10 cm</p>
               </div>
             </div>
-          </div>
+          </div>-->
           <br><br><br><br><a href="past.html">(top)</a>
         </div>
       </div>
