--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -57,7 +57,7 @@
         <ul class="row first">
             <li>
                 <img class="text-center" width="182px" height="240px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
-                <div class="text"></div>
+                <span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="150px" height="240px" alt="Self_Portrait_With_Coffee_Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
