--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -57,36 +57,36 @@
         <ul class="row first">
             <li>
                 <img class="text-center" width="182px" height="240px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
-                <span class="text"></span>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="150px" height="240px" alt="Self_Portrait_With_Coffee_Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
-                <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="142px" height="240px" alt="Self_Portrait_Yellow_Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <!--<div class="clearfix visible-lg-block"></div>-->
             <li>
                 <img class="text-center" width="188px" height="240px" alt="Self_Portrait_Green_Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
-                <div class="text"</div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="320px" height="240px" alt="encaustic_portrait"  src="images/encaustic_portrait.jpg">
-                <div class="text"></div>
+                <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="314px" height="240px" alt="Line_For_Icecream"  src="images/Line_For_Icecream.jpg">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
-                 <div class="text"></div>
+                 <br><span class="text"></span>
             </li>
             <li>
                 <img class="text-center" width="" height="240px" alt=""  src="">
