--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -55,6 +55,7 @@
     <div id="art_storage"><!--#art_storage-->
       <div class="container">
         <ul class="row first">
+          <div class="col-lg-12">
             <li>
                 <img class="text-center" width="182px" height="240px" alt="selfport_striped_shirt"  src="images/selfport_striped_shirt.jpg">
                 <br><span class="text"></span>
@@ -497,7 +498,7 @@
               </div>
             </div>
           </div>-->
-        
+        </div>
       </div>
       <a href="present.html">(top)</a>
     </div><!--#art_storage-->
